// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form > renders correctly with node children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      Test
    </form>
  </div>
</DocumentFragment>
`;

exports[`Form > renders correctly with onSubmit 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <button
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
